# python-solutions

advancedselector/: pyproject.toml  requirements.txt  setup.cfg  setup.py
advancedselector/src/: __init__.py
advancedselector/src/colors/: colors.py
advancedselector/src/selector/: picker.py
advancedselector/tests/: test_colors.py  test_picker.py
