[metadata]
name = advancedselector
version = 2.0.0
author = Joshua Hegedus
author_email = jh.host39@gmail.com
description = An advanced python selection picker
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/bit-of-faith/python-solutions/selector
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://github.com/bit-of-faith/python-solutions/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    py-getch
    windows-curses
[options.packages.find]
where = src